Optimize balance detection and past pools loading
- Add wallet switching detection: reset balance state when account changes
- Add periodic balance refresh every 10 seconds
- Add real-time Transfer and Approval event listeners for instant balance updates
- Optimize past pools loading with parallel API calls (10x faster)
- Only reload past pools when pool ID changes, not every 3 seconds
- Add Transfer and Approval events to ERC20 ABI
- Fix event listener setup for ethers v6 compatibility
- Refresh balance after entering pool

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+    <meta name="theme-color" content="#FB923C" />
     <title>FHE Draw Lots</title>
     <!-- FHEVM Relayer SDK -->
     <script src="https://cdn.zama.org/relayer-sdk-js/0.3.0-5/relayer-sdk-js.umd.cjs"></script>
